--- a/index.html
+++ b/index.html
@@ -15,38 +15,17 @@
 <meta name="rating" content="general" />
 <meta name="lang" content="en" />
 <meta name="doc-type" content="webpage" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
-<meta name="Description" content="A javascript countdown clock or timer with beautiful HTML and CSS styling that is simple to use in any project or on any website .">
-<meta name="Keywords" content="javascript, js, countdown, clock, timer, css, html, website, design, beautiful timer, countdown clock, countdown timer, javascript timer, javascript countdown clock, javascript countdown timer">
-<link rel="stylesheet" type="text/css" href="timer.css">
+<meta name="Description" content="A collection of day-to-day web utilities on the go!">
+<meta name="Keywords" content="">
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2386262603049273" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<div class="display">
 		<div id="clock" class="clock">
-			<h1 class="event_title">Coming Soon in...</h1>
-			<div id="numbers">
-				<span class="days"></span>
-				<span class="hours"></span>
-				<span class="minutes"></span>
-				<span class="seconds"></span>
-				<span class="milliseconds"></span>
-			</div>
-			<div id="units">
-				<span>Days</span>
-				<span>Hours</span>
-				<span>Minutes</span>
-				<span>Seconds</span>
-				<span>Milliseconds</span>
-			</div>
-		</div>
-		<div id="door" class="hide">
-			<h1 class="event_title">website Is Live</h1>
-			<p class="action_caption">View the new website!</p>
-			<button class="call_to_action_button" type="button" onclick="liveStream('https://beta.etools.ml/')">Enter Website!</button>
-		</div>
+			<h1 class="event_title" align='center'>Coming Soon!</h1>
+        	</div>
 	</div>
-	<script src="timer.js"></script>
 </body>
 </html>
